Added WAV to HWAS conversion

--- a/GHDS_ModdingTool.csproj
+++ b/GHDS_ModdingTool.csproj
@@ -18,15 +18,18 @@
     <Compile Include="GHDS_ModdingTool.cs" />
     <Compile Include="nds\*.cs" />
     <Compile Include="utils\*.cs" />
+    <Compile Include="audio\*.cs" />
+    <Compile Include="audio\WAV\*.cs" />
+    <Compile Include="audio\HWAS\*.cs" />
   </ItemGroup>
   <ItemGroup>
 	<Compile Include="AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-	<!--<Reference Include="./packages/NAudio.dll" />-->
+	<Reference Include="./packages/NAudio.dll" />
   </ItemGroup>
   <ItemGroup>
-	<!-- <EmbeddedResource Include="./packages/NAudio.dll" /> -->
+	<EmbeddedResource Include="./packages/NAudio.dll" />
 	<EmbeddedResource Include="./GHDS_ModdingTool.ico" />
   </ItemGroup>
   <PropertyGroup>
