Added song.ini and notes.mid parsing

--- a/GHDS_ModdingTool.csproj
+++ b/GHDS_ModdingTool.csproj
@@ -19,6 +19,8 @@
     <Compile Include="nds\*.cs" />
     <Compile Include="utils\*.cs" />
     <Compile Include="gh\*.cs" />
+    <Compile Include="gh\charts\*.cs" />
+    <Compile Include="gh\charts\midi\*.cs" />
     <Compile Include="gh\audio\*.cs" />
     <Compile Include="gh\audio\WAV\*.cs" />
     <Compile Include="gh\audio\HWAS\*.cs" />
@@ -28,9 +30,11 @@
   </ItemGroup>
   <ItemGroup>
 	<Reference Include="./packages/NAudio.dll" />
+    <Reference Include="./packages/Melanchall.DryWetMidi.dll" />
   </ItemGroup>
   <ItemGroup>
 	<EmbeddedResource Include="./packages/NAudio.dll" />
+	<EmbeddedResource Include="./packages/Melanchall.DryWetMidi.dll" />
 	<EmbeddedResource Include="./GHDS_ModdingTool.ico" />
   </ItemGroup>
   <PropertyGroup>
