Added OGG conversion
Added OGG to OGG/WAV/HWAS conversion. Waiting for Evan to potentially provide an alternative to oggdec and oggenc so we don't have to embed and extract those at runtime.

--- a/GHDS_ModdingTool.csproj
+++ b/GHDS_ModdingTool.csproj
@@ -22,6 +22,7 @@
     <Compile Include="gh\charts\*.cs" />
     <Compile Include="gh\charts\midi\*.cs" />
     <Compile Include="gh\audio\*.cs" />
+    <Compile Include="gh\audio\OGG\*.cs" />
     <Compile Include="gh\audio\WAV\*.cs" />
     <Compile Include="gh\audio\HWAS\*.cs" />
   </ItemGroup>
@@ -35,6 +36,12 @@
   <ItemGroup>
 	<EmbeddedResource Include="./packages/NAudio.dll" />
 	<EmbeddedResource Include="./packages/Melanchall.DryWetMidi.dll" />
+    <EmbeddedResource Include="./embedded_binaries/oggdec.exe" />
+    <EmbeddedResource Include="./embedded_binaries/oggenc.exe" />
+    <EmbeddedResource Include="./embedded_binaries/libFLAC_dynamic.dll" />
+    <EmbeddedResource Include="./embedded_binaries/libogg.dll" />
+    <EmbeddedResource Include="./embedded_binaries/libvorbis.dll" />
+    <EmbeddedResource Include="./embedded_binaries/libvorbisfile.dll" />
 	<EmbeddedResource Include="./GHDS_ModdingTool.ico" />
   </ItemGroup>
   <PropertyGroup>
