Added option to silence unneeded tracks
Embed dummy audios to use them as whole tracks to make them silent when using a single audio file rather than multiple tracks. To prevent artifacts when using dummy audios, we must avoid increasing their volume.

--- a/GHDS_ModdingTool.csproj
+++ b/GHDS_ModdingTool.csproj
@@ -42,6 +42,8 @@
     <EmbeddedResource Include="./embedded_binaries/libogg.dll" />
     <EmbeddedResource Include="./embedded_binaries/libvorbis.dll" />
     <EmbeddedResource Include="./embedded_binaries/libvorbisfile.dll" />
+    <EmbeddedResource Include="./embedded_resources/dummy.ogg" />
+    <EmbeddedResource Include="./embedded_resources/dummy.wav" />
 	<EmbeddedResource Include="./GHDS_ModdingTool.ico" />
   </ItemGroup>
   <PropertyGroup>
